// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Button Split (unit tests) when has a icon should match the snapshot 1`] = `
<kv-action-button-split icon="kv-add" size="large" split-button="kv-arrow-drop-down" text="Split Button" type="primary">
  <mock:shadow-root>
    <div class="action-button-split">
      <kv-action-button-text icon="kv-add" part="left-action-button" size="large" text="Split Button" type="primary"></kv-action-button-text>
      <kv-action-button part="right-action-button" size="large" type="primary">
        <kv-svg-icon part="button-split-icon"></kv-svg-icon>
      </kv-action-button>
    </div>
  </mock:shadow-root>
</kv-action-button-split>
`;

exports[`Action Button Split (unit tests) when uses default props should match the snapshot 1`] = `
<kv-action-button-split icon="" size="large" split-button="kv-arrow-drop-down" text="Split Button" type="primary">
  <mock:shadow-root>
    <div class="action-button-split">
      <kv-action-button-text icon="" part="left-action-button" size="large" text="Split Button" type="primary"></kv-action-button-text>
      <kv-action-button part="right-action-button" size="large" type="primary">
        <kv-svg-icon part="button-split-icon"></kv-svg-icon>
      </kv-action-button>
    </div>
  </mock:shadow-root>
</kv-action-button-split>
`;
